manifests/05-network-policy/observability-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: observability-client
  namespace: security-observability
  labels:
    app: observability-client
    access: allowed
spec:
  automountServiceAccountToken: false
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
    runAsGroup: 1000
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: curl
      image: curlimages/curl:8.8.0
      command: ["sh", "-c", "sleep 3600"]
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop: ["ALL"]
