manifests/05-network-policy/backend-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api
  namespace: security-backend
  labels:
    app: backend-api
spec:
  type: ClusterIP
  selector:
    app: backend-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
