manifests/05-network-policy/allow-observability-to-backend-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-observability-to-backend-api
  namespace: security-backend
spec:
  podSelector:
    matchLabels:
      app: backend-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: security-observability
      # Permite por namespace: todos os pods de security-observability.
      ports:
        - protocol: TCP
          port: 8080
